Implement chart to display data

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -2,9 +2,19 @@
 <head>
   <title>Windy</title>
 
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+  <script type="text/javascript" src='/js/app.js'></script>
+  <script type="text/javascript" src='/js/chart.js'></script>
+
   <!-- Foundation Front end framework -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.3/css/foundation.min.css">
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.3/js/foundation.js"></script>
+  <!-- Foundation END -->
+
+  <!-- Highcharts -->
+  <script src="https://code.highcharts.com/highcharts.js"></script>
+  <!-- Highcharts END -->
 </head>
 <body>
   <%= yield %>
